[package]
name = "helloaya-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
helloaya-common = { path = "../helloaya-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "helloaya"
path = "src/main.rs"
